# Rust-Test

./: Cargo.toml
src/: app_class.rs  application.rs  game.rs  game_base_class.rs  gl_methods.rs  main.rs  shaders_list.rs
src/app_class/: cfg_app_class.rs  vector_class.rs
src/game/: setup_logic.rs  update_logic.rs
src/shaders_list/: frag_shader.rs  vert_shader.rs
