[package]
name = "Practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
ogl33 = { version = "0.2.0", features = ["debug_error_checks"]}
beryllium = "0.3.3"
serde_json = "1.0.91"
serde = {version = "1.0.152", features = ["derive"]}
